  suitable for specification of shapes that can be inserted to diagram manager as top shapes (i.e.
  shapes without any parent).
- Diagram manager now accepts all shape types by default (also, all the shapes are accepted
  as top shapes by default).
- Added new shape style sfsPROPAGATE_INTERACTIVE_CONNECTION allowing the shape to propagate interactive connection
  request to its parent.
- Updated sample projects to reflect new features.

Changes in version 1.12.4 beta (2013-02-14):
--------------------------------------------
- Fixed build error with wxWidgets 2.9.5.

Changes in version 1.12.3 beta (2012-12-14):
--------------------------------------------
- wxAutoBufferedPaintDC is used in shape canvas insted wxBufferedPaintDC which should
  improve drawing speed under Linux and Mac OS X.
- Switched to use wxXmlSerializer 1.3.7.

Changes in version 1.12.2 beta (2012-11-25):
--------------------------------------------
- Shape events are processed immediatelly (which returns former behaviour and fixes at least
  incorrect shape handles delta value published via wxSF events).
- Handle movement delta is set to 0,0 at the begining of the handle dragging.

Changes in version 1.12.1 beta (2011-01-06):
--------------------------------------------
- Added function wxSFShapeCanvas::SaveCanvasToImage(...) providing better diagram export to an image.
- Added function wxSFShapeCanvas::InvalidateVisibleRect() which marks whole visible canvas rectangle
  as an invalidated one.
- Updated wxSFDemo project to reflect new features.
- Fixed drawing issues when multiple selected shapes were handled.
- Fixed compilation under MacOS.
- Fixed compilation for wxWidgets with --enable-stl option.
- Fixed propagation of shape selection to all its parents recursively if sfsPROPAGATE_SELECTION flag is set.

Changes in version 1.12.0 beta (2011-10-25):
--------------------------------------------
- Optimized canvas refresh.