@@ -151,7 +151,7 @@ void wxSFMultiSelRect::OnRightHandle(wxSFShapeHandle& handle)
 				if(pShape->ContainsStyle(sfsSIZE_CHANGE))pShape->Scale(sx, 1, sfWITHCHILDREN);
                 if(pShape->ContainsStyle(sfsPOSITION_CHANGE))pShape->MoveBy(dx, 0);
 				
-				pShape->FitToChildren();
+				if( ! pShape->ContainsStyle( sfsNO_FIT_TO_CHILDREN ) ) pShape->FitToChildren();
 			}
 			else
 			{
@@ -208,9 +208,9 @@ void wxSFMultiSelRect::OnLeftHandle(wxSFShapeHandle& handle)
                     }
                 }
 
-                if(pShape->ContainsStyle(sfsSIZE_CHANGE))pShape->Scale(sx, 1, sfWITHCHILDREN);
+                if(pShape->ContainsStyle(sfsSIZE_CHANGE)) pShape->Scale(sx, 1, sfWITHCHILDREN);
 				
-				pShape->FitToChildren();
+				if( ! pShape->ContainsStyle( sfsNO_FIT_TO_CHILDREN ) ) pShape->FitToChildren();
             }
             else
 			{
@@ -256,10 +256,10 @@ void wxSFMultiSelRect::OnBottomHandle(wxSFShapeHandle& handle)
             {
                 dy = (pShape->GetAbsolutePosition().y - (GetAbsolutePosition().y + sfDEFAULT_ME_OFFSET))/(GetRectSize().y - 2*sfDEFAULT_ME_OFFSET)*handle.GetDelta().y;
 
-                if(pShape->ContainsStyle(sfsSIZE_CHANGE))pShape->Scale(1, sy, sfWITHCHILDREN);
-                if(pShape->ContainsStyle(sfsPOSITION_CHANGE))pShape->MoveBy(0, dy);
+                if(pShape->ContainsStyle(sfsSIZE_CHANGE)) pShape->Scale(1, sy, sfWITHCHILDREN);
+                if(pShape->ContainsStyle(sfsPOSITION_CHANGE)) pShape->MoveBy(0, dy);
 				
-				pShape->FitToChildren();
+				if( ! pShape->ContainsStyle( sfsNO_FIT_TO_CHILDREN ) ) pShape->FitToChildren();
             }
             else
             {
@@ -318,7 +318,7 @@ void wxSFMultiSelRect::OnTopHandle(wxSFShapeHandle& handle)
 
                 if(pShape->ContainsStyle(sfsSIZE_CHANGE))pShape->Scale(1, sy, sfWITHCHILDREN);
 				
-				pShape->FitToChildren();
+				if( ! pShape->ContainsStyle( sfsNO_FIT_TO_CHILDREN ) ) pShape->FitToChildren();
             }
             else
             {
