@@ -453,7 +453,7 @@ void wxSFShapeBase::Update()
     //}
 
     // fit the shape to its children
-    this->FitToChildren();
+    if( ! ContainsStyle( sfsNO_FIT_TO_CHILDREN ) ) this->FitToChildren();
 
     // do it recursively on all parent shapes
     if( GetParentShape() )GetParentShape()->Update();
